# nanocode

./: .PLAN.md  .gitignore  .pre-commit-config.yaml  1  AGENTS.md  CHANGELOG.md  LICENSE  PLAN.md  README.md  SPEC.md  SYSTEM_PROMPT.md  bs_test.py  config.yaml  config.yaml_b  default_config.yaml  main.py  pyproject.toml  pytest.functional.ini  pytest.unit.ini  requirements.txt  sess.json
.github/workflows/: lint.yml  tests.yml
.nanocode/hooks/: example.json
.system_prompts/: base.md  template.md  template.md.bak
agent/: __init__.py  config.py  context.py  core.py  state.py
agent/cli/: __init__.py  ncurses.py
agent/llm/: __init__.py  registry.py  router.py
agent/lsp/: __init__.py
agent/mcp/: __init__.py
agent/multimodal/: __init__.py
agent/planning/: __init__.py
agent/tools/: __init__.py  file_tracker.py
agent_smith/: config.py  context.py  core.py  doom_loop.py  file_watcher.py  retry.py  session_summary.py
agent_smith/acp/: __init__.py
agent_smith/admin/: __init__.py  web_templates.py
agent_smith/agents/: __init__.py  permission.py
agent_smith/bus/: __init__.py
agent_smith/cli/: __init__.py  commands.py  ncurses.py
agent_smith/effect/: __init__.py
agent_smith/format/: __init__.py
agent_smith/github/: __init__.py  tools.py
agent_smith/llm/: __init__.py  registry.py  router.py
agent_smith/lsp/: __init__.py
agent_smith/mcp/: __init__.py
agent_smith/mdns/: __init__.py
agent_smith/messaging/: __init__.py  slack.py  telegram.py  whatsapp.py
agent_smith/multimodal/: __init__.py
agent_smith/planning/: __init__.py
agent_smith/plugin/: __init__.py
agent_smith/pty/: __init__.py
agent_smith/server/: __init__.py
agent_smith/skills/: __init__.py
agent_smith/snapshot/: __init__.py
agent_smith/storage/: __init__.py  database.py  models.py  session.py
agent_smith/tools/: __init__.py  file_tracker.py  task.py
agent_smith/worktree/: __init__.py
benchmark/: README.md  STRATEGY_REPORT.md  compaction-benchmark.json  eval-results.json  forced-compaction-benchmark.json  run_benchmark.py  run_compaction_benchmark.py  run_forced_compaction.py  run_quick_eval.py  topic-id-compaction-benchmark.json
docs/: failure-modes.md
nanocode/: __init__.py  __main__.py  agent_pipeline.py  budgeted.py  checkpoint.py  config.py  config_injector.py  context.py  core.py  cost.py  doom_loop.py  dream_distill.py  drift.py  dynamic_tools.py  edit_transaction.py  enhanced_session.py  file_watcher.py  git_tools.py  goal_manager.py  grep.py  hierarchical.py  keyring.py  main.py  message_actions.py  modified_files.py  pipeline.py  plan_followup.py  provider_registry.py  recovery.py  repo_map.py  research.py  retry.py  retry_guard.py  scheduler.py  session_manager.py  session_summary.py  state.py  todo_service.py
nanocode/acp/: __init__.py
nanocode/admin/: __init__.py  web_templates.py
nanocode/agents/: __init__.py  curator.py  delegate.py  permission.py  review.py
nanocode/bus/: __init__.py
nanocode/cli/: __init__.py  commands.py
nanocode/codebase_index/: __init__.py  bm25.py  indexer.py  tool.py
nanocode/context/: __init__.py
nanocode/context_chips/: __init__.py  chips.py  fetcher.py  manager.py
nanocode/effect/: __init__.py
nanocode/format/: __init__.py
nanocode/git/: __init__.py  commit_message.py  review.py
nanocode/github/: __init__.py  tools.py
nanocode/goals/: __init__.py
nanocode/hooks/: __init__.py
nanocode/llm/: __init__.py  base.py  events.py  max_mode.py  registry.py  router.py  stream_parser.py
nanocode/lsp/: __init__.py
nanocode/mcp/: __init__.py
nanocode/mdns/: __init__.py
nanocode/memory/: __init__.py  indexer.py  project_memory.py  reconciler.py  search.py
nanocode/messaging/: __init__.py  slack.py  telegram.py  whatsapp.py
nanocode/multimodal/: __init__.py
nanocode/patch/: __init__.py
nanocode/planning/: __init__.py  task_registry.py
nanocode/plugin/: __init__.py
nanocode/prompts/: __init__.py  template_loader.py
nanocode/pty/: __init__.py
nanocode/sandbox/: __init__.py  base.py  blaxel.py  docker.py  local.py
nanocode/server/: __init__.py
nanocode/session/: message.py  processor.py
nanocode/share/: __init__.py
nanocode/skills/: __init__.py
nanocode/snapshot/: __init__.py  git.py
nanocode/storage/: __init__.py  cache.py  database.py  models.py  session.py  topic_cache.py  topic_extractor.py
nanocode/tools/: __init__.py  backup.py  file_tracker.py  lazy_deps.py  parallel.py  text_detector.py
nanocode/tui/: __init__.py  app.py
nanocode/worktree/: __init__.py
scripts/: find_model.py
sdks/vscode/: README.md  package.json  tsconfig.json
tests/: test_context_chips.py  test_context_reconstruction.py  test_cost.py  test_docker_sandbox.py  test_dream_distill.py  test_dual_grep.py  test_dynamic_tools.py  test_edit_transaction.py  test_enhanced_session.py  test_git_tools.py  test_goals.py  test_key_manager.py  test_memory_fts.py  test_project_memory.py  test_prompts.py  test_provider_registry.py  test_recovery.py  test_research.py  test_skills_discovery.py  test_streaming_events.py  test_task_registry.py  test_tool_parallel.py
tests/functional/: test_agent.py  test_cli.py  test_file_tracker.py
tests/unit/: test_acp.py  test_admin.py  test_agents.py  test_atomic.py  test_backends_database.py  test_backends_local.py  test_backends_router.py  test_bashtool_security.py  test_bus.py  test_checkpoint.py  test_cli_components.py  test_cli_interactive.py  test_commands.py  test_context.py  test_curator.py  test_doom_loop.py  test_drift.py  test_edit_tool.py  test_effect.py  test_error_recovery_adversarial.py  test_file_watcher.py  test_format.py  test_free_exa_modes.py  test_git.py  (+46 more)
(+58 files in other folders)
