[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanocode"
version = "0.1.1"
description = "Autonomous AI agent for console with advanced tool use made by another agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Daniel Clavijo", email = "dclavijo@email.com"}
]
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "python-frontmatter>=1.1.0",
    "watchdog>=4.0.0",
    "aiohttp>=3.9.0",
    "aiohttp-jinja2>=1.6.0",
    "PyGithub>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
]
tui = [
    "textual>=0.90.0",
]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov",
    "pytest-mock",
    "hypothesis",
]
lint = [
    "ruff",
    "mypy",
]
all = ["nanocode[dev,test,lint]"]
storage = [
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
nanocode = "nanocode.__main__:cli_main"
agent-smith-install-skills = "nanocode.skills:install_skills"

[project.urls]
Homepage = "https://github.com/dclavijo/nanocode"
Repository = "https://github.com/dclavijo/nanocode"
Issues = "https://github.com/dclavijo/nanocode/issues"

[tool.hatch.build.targets.wheel]
packages = ["nanocode"]

[tool.hatch.build.targets.sdist]
include = ["nanocode"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = [
    "E501",
    "ANN204",  # __init__ return type annotation
    "ANN201",  # Missing return type for public function
    "ANN202",  # Missing return type for private function
    "ANN001",  # Missing type annotation for function argument
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "ANN206",  # Missing return type annotation for classmethod
    "ANN401",  # Dynamically typed expressions disallowed
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "ARG004",  # Unused static method argument
    "ARG005",  # Unused lambda argument
    "N802",    # Function name should be lowercase
    "N803",    # Argument name should be lowercase
    "N805",    # First argument of a method should be named self
    "N806",    # Variable in function should be lowercase
    "N818",    # Exception name should be named with Error suffix
    "W291",    # Trailing whitespace
    "W293",    # Blank line contains whitespace
    "C416",    # Unnecessary list comprehension
    "UP035",   # typing.Dict is deprecated
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"web_templates.py" = ["E501", "W293", "F541"]
"tests/*" = ["ANN", "ARG", "N806"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=nanocode --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["nanocode"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]